<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/choice"
            android:textColor="@color/text2"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/picker_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/choice"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text"
            android:gravity="center"/>

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            app:np_width="64dp"
            app:np_height="180dp"
            >

        </com.shawnlin.numberpicker.NumberPicker>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/warning_dialog_cancel_bt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/text2"
                android:layout_margin="15dp"
                android:textSize="20dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/warning_dialog_ok_bt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/text2"
                android:layout_margin="15dp"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:text="@string/ok"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>