<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/warning_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/warning"
            android:textColor="@color/colorTextIcon"
            android:textSize="15dp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="15dp">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/warning_dialog_animation"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:lottie_fileName="warning.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                />
            <TextView
                android:id="@+id/warning_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:gravity="center"
                android:textSize="15dp"
                android:padding="5dp"/>
        </LinearLayout>

        <EditText
            android:id="@+id/warning_dialog_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_edittext_dialog"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15dp" />
        <EditText
            android:id="@+id/warning_dialog_et_decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/custom_edittext_dialog"
            android:padding="5dp"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/warning_dialog_cancel_bt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/custom_button_dialog"
                android:textColor="@color/colorTextIcon"
                android:layout_margin="15dp"
                android:textSize="20dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/warning_dialog_ok_bt"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/custom_button_dialog"
                android:textColor="@color/colorTextIcon"
                android:layout_margin="15dp"
                android:textSize="20dp"
                android:textAllCaps="false"
                android:text="@string/ok"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>